load("@com_github_xoebus_rules_bosh//bosh:def.bzl", "bosh_package", "bosh_release")

bosh_package(
    name = "bpm",
    srcs = [
        "//bpm/cmd/bpm:bpm",
    ],
)

bosh_package(
    name = "test-server",
    srcs = [
        "//bpm/acceptance/fixtures/test-server:test-server",
    ],
)

bosh_package(
    name = "bpm-runc",
    srcs = [
        ":runc_rename",
    ],
)

genrule(
    name = "runc_rename",
    srcs = [
        "@runc//file",
    ],
    outs = ["runc"],
    cmd = "cp $(location @runc//file) $@",
)

bosh_release(
    name = "bpmrelease",
    stemcell_distro = "ubuntu-trusty",
    stemcell_version = "1234",
    packages = [
        ":bpm",
        ":test-server",
	":bpm-runc",
    ],
    jobs = [
        "//bosh/jobs/bpm:bpm",
        "//bosh/jobs/test-server:test-server",
    ],
)
