load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "adapter.go",
        "seccomp.go",
    ],
    importpath = "bpm/runc/adapter",
    visibility = ["//visibility:public"],
    deps = [
        "//bpm/config:go_default_library",
        "//bpm/vendor/code.cloudfoundry.org/bytefmt:go_default_library",
        "//bpm/vendor/code.cloudfoundry.org/lager:go_default_library",
        "//bpm/vendor/github.com/opencontainers/runtime-spec/specs-go:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "adapter_suite_test.go",
        "adapter_test.go",
    ],
    deps = [
        ":go_default_library",
        "//bpm/config:go_default_library",
        "//bpm/vendor/code.cloudfoundry.org/bytefmt:go_default_library",
        "//bpm/vendor/code.cloudfoundry.org/lager/lagertest:go_default_library",
        "//bpm/vendor/github.com/onsi/ginkgo:go_default_library",
        "//bpm/vendor/github.com/onsi/gomega:go_default_library",
        "//bpm/vendor/github.com/opencontainers/runtime-spec/specs-go:go_default_library",
    ],
)
